tests/valid/control_flow/if_elif_else.nyx
// if / elif / else
func sign(x: i32) -> i32
    if x > 0
        return 1
    elif x < 0
        return -1
    else
        return 0
