tests/invalid/syntax/wrong_generic_brackets.nyx
// Invalid: Generic parameters using wrong brackets
func wrong_brackets<T>(value: T) -> T
    return value
